--- a/static/css/aside/applicantmanagement.css
+++ b/static/css/aside/applicantmanagement.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: Arial, sans-serif;
     background-color: #f8f8f8;
@@ -21,16 +20,16 @@ body {
     cursor: pointer;
     font-size: 16px;
     font-weight: 700;
-    margin: 20px 0; 
-    position: relative; 
+    margin: 20px 0;
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .sidebar button span {
-    margin-left: -95px; 
+    margin-left: -95px;
 }
-.sidebar button.clicked{
+.sidebar button.clicked {
     font-weight: 900;
     background-color: #f2f2f2; /* 더 연한 배경색 */
     border-color: #ddd; /* 더 연한 테두리 색상 */
@@ -39,11 +38,11 @@ body {
 .sidebar ul {
     list-style: none;
     padding: 0;
-    margin: 0; 
+    margin: 0;
 }
 .sidebar li {
-    margin-top: 20px; 
-    margin-bottom: 20px; 
+    margin-top: 20px;
+    margin-bottom: 20px;
     font-size: 16px;
     position: relative;
     padding-left: 35px;
@@ -60,10 +59,10 @@ body {
     transition: content 0.3s ease;
 }
 .sidebar .triangle.clicked::before {
-    content: "▼"; 
+    content: "▼";
 }
 .sidebar .circle::before {
-    content: "●"; 
+    content: "●";
     position: absolute;
     left: 20px;
     top: 50%;
@@ -71,12 +70,12 @@ body {
     font-size: 10px;
     line-height: 1;
 }
-.sidebar .circle.clicked{
+.sidebar .circle.clicked {
     font-weight: 700;
     background-color: #f2f2f2;
 }
 .sidebar .circle.clicked::before {
-    content: "■"; 
+    content: "■";
     font-size: 16px;
 }
 
@@ -87,6 +86,7 @@ body {
 }
 .content-wrapper {
     display: flex;
+    margin: 0px 200px;
 }
 .main-content {
     background-color: #ffffff;
@@ -101,7 +101,7 @@ body {
     border-bottom: 1px solid #ccc;
 }
 .checkbox {
-    cursor:pointer;
+    cursor: pointer;
     margin-right: 10px;
 }
 .star {
