--- a/static/css/main/NoticeFaq.css
+++ b/static/css/main/NoticeFaq.css
@@ -78,6 +78,11 @@ i {
     -moz-osx-font-smoothing: grayscale;
 }
 
+img {
+    overflow-clip-margin: content-box;
+    overflow: clip;
+}
+
 .css0>div{
     font-family: 'Pretendard', 'ui-sans-serif', '-apple-system', 'BlinkMacSystemFont', "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 16px;
@@ -435,4 +440,315 @@ i {
     color: inherit;
     text-decoration: none;
     fill: inherit;
+}
+
+.notification-item {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: 3px 0 3px 2px;
+    cursor: pointer;
+    user-select: none;
+    transition: background 20ms ease-in;
+  }
+  
+  .icon-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 24px;
+    height: 24px;
+    margin-right: 4px;
+    border-radius: 3px;
+    flex-shrink: 0;
+  }
+  
+  .icon {
+    height: 19.8px;
+    width: 19.8px;
+    font-size: 19.8px;
+    line-height: 1;
+    color: black;
+  }
+  
+.notification-item .text {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-weight: 400;
+    line-height: 1.3;
+    border-bottom: 1px solid rgba(55, 53, 47, 0.16);
+}
+
+.pageShapeIcon{
+    width: 1em;
+    height: 1em;
+    font-size: 19.8px;
+    line-height: 1;
+    background-repeat: no-repeat;
+    background: url(https://cdn.lazyrockets.com/_next/static/media/emoji.0d02c5b5.png);
+    background-position-x: 49.152542372881356%;
+    background-position-y: 13.559322033898304%;
+    background-size: 6000% 6000%;
+}
+
+.notion-divider-block{
+    margin-top: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.notion-cursor-default {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 13px;
+}
+
+.divider-line {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px solid rgba(55, 53, 47, 0.09);
+}
+
+.lockShapeIcon{
+    line-height: 1em;
+    background-repeat: no-repeat;
+    background: url(https://cdn.lazyrockets.com/_next/static/media/emoji.0d02c5b5.png);
+    background-position-x: 50.847457627118644%;
+    background-position-y: 16.94915254237288%;
+    -webkit-background-size: 6000% 6000%;
+    background-size: 6000% 6000%;
+    width: 100%;
+    height: 100%;
+}
+
+.notification-item:hover{
+    background-color: #ebebeb;
+}
+
+.goToTopButtonContainer{
+    transform: translateY(100px);  /* 아래쪽에 숨겨진 상태 */
+    opacity: 0;
+}
+
+.goToTopButtonContainer.show {
+    transform: translateY(0px);
+    opacity: 1;
+}
+
+.applyShapeIcon{
+    width: 100%;
+    height: 100%;
+    line-height: 1em;
+    background-repeat: no-repeat;
+    background: url(https://cdn.lazyrockets.com/_next/static/media/emoji.0d02c5b5.png);
+    background-position-x: 30.508474576271187%;
+    background-position-y: 57.6271186440678%;
+    background-size: 6000% 6000%;
+}
+
+.cashShapeIcon{
+    width: 100%;
+    height: 100%;
+    line-height: 1em;
+    background-repeat: no-repeat;
+    background: url(https://cdn.lazyrockets.com/_next/static/media/emoji.0d02c5b5.png);
+    background-position-x: 47.45762711864407%;
+    background-position-y: 59.32203389830508%;
+    background-size: 6000% 6000%;
+}
+
+.guitarShapeIcon{
+    width: 100%;
+    height: 100%;
+    line-height: 1em;
+    background-repeat: no-repeat;
+    background: url(https://cdn.lazyrockets.com/_next/static/media/emoji.0d02c5b5.png);
+    background-position-x: 13.559322033898304%;
+    background-position-y: 10.16949152542373%;
+    background-size: 6000% 6000%;
+}
+
+.notion-text-block{
+    margin-top: 60px;
+    width: 100%;
+    max-width: calc(100vw - 192px);
+    margin-bottom: 1px;
+}
+
+.notion-text-block {
+    color: inherit;
+    fill: inherit;
+}
+
+.css-1g4vl24 {
+    display: flex;
+}
+
+.notion-emoji {
+    width: 1em;
+    height: 1em;
+    line-height: 1em;
+    vertical-align: -0.1em;
+    margin: 0;
+}
+
+.notion-link-token {
+    cursor: pointer;
+    color: inherit;
+    overflow-wrap: break-word;
+    text-decoration: inherit;
+}
+
+.notion-link-token span {
+    border-bottom: 0.05em solid rgba(55, 53, 47, 0.4);
+    opacity: 0.7;
+    transition: border-color .1s ease-in, opacity .1s ease-in;
+}
+
+.notion-link-token span:hover{
+    opacity: 1;
+}
+
+.mailShapeIcon{
+    background: url(https://cdn.lazyrockets.com/_next/static/media/emoji.0d02c5b5.png);
+    background-size: 6000% 6000%;
+    background-position-x: 96.61016949152543%;
+    background-position-y: 54.23728813559322%;
+    width: 1em;
+    height: 1em;
+    line-height: 1em;
+    vertical-align: -0.1em;
+    margin: 0px;
+    margin-top: 3px;
+    margin-right: 5px;
+    font-size: 16px;
+}
+
+.inquiryInfo{
+    height: 30px;
+    line-height: 200%;
+    width: 100%;
+    max-width: calc(100vw - 192px);
+    margin-top: 1px;
+    margin-bottom: 3px;
+    background-color: rgb(241, 241, 239);
+}
+
+.companyShapeIcon{
+    width: 100%;
+    height: 100%;
+    line-height: 1em;
+    background-repeat: no-repeat;
+    background: url(https://cdn.lazyrockets.com/_next/static/media/emoji.0d02c5b5.png);
+    background-position-x: 16.94915254237288%;
+    background-position-y: 38.983050847457626%;
+    -webkit-background-size: 6000% 6000%;
+    background-size: 6000% 6000%;
+}
+
+.cardShapeIcon{
+    width: 100%;
+    height: 100%;
+    line-height: 1em;
+    background-repeat: no-repeat;
+    background: url(https://cdn.lazyrockets.com/_next/static/media/emoji.0d02c5b5.png);
+    background-position-x: 47.45762711864407%;
+    background-position-y: 64.40677966101694%;
+    -webkit-background-size: 6000% 6000%;
+    background-size: 6000% 6000%;
+}
+
+.memoShapeIcon{
+    width: 100%;
+    height: 100%;
+    line-height: 1em;
+    background-repeat: no-repeat;
+    background: url(https://cdn.lazyrockets.com/_next/static/media/emoji.0d02c5b5.png);
+    background-position-x: 49.152542372881356%;
+    background-position-y: 3.389830508474576%;
+    -webkit-background-size: 6000% 6000%;
+    background-size: 6000% 6000%;
+}
+
+.search-container {
+    inset: 0px;
+    z-index: 2147483647;
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    display: flex;
+    align-items: flex-start;
+    -webkit-box-pack: center;
+    justify-content: center;
+    pointer-events: auto;
+    background: rgba(15, 15, 15, 0.6);
+}
+
+.search-box {
+    position: relative;
+    z-index: 100000000;
+    box-shadow: rgba(15, 15, 15, 0.05) 0px 0px 0px 1px, rgba(15, 15, 15, 0.1) 0px 5px 10px, rgba(15, 15, 15, 0.2) 0px 15px 40px;
+    border-radius: 3px;
+    background: white;
+    top: 90px;
+    overflow: hidden;
+    width: 75%;
+    max-width: 600px;
+    min-height: 50px;
+    max-height: 80vh;
+}
+
+.search-input-wrapper {
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    border: none;
+    padding: 0px 16px;
+    width: 100%;
+    background: transparent;
+    font-size: 18px;
+    line-height: inherit;
+    height: 52px;
+    -webkit-box-flex: 0;
+    flex-grow: 0;
+    flex-shrink: 0;
+    z-index: 1;
+    box-shadow: rgba(55, 53, 47, 0.09) 0px 1px 0px;
+}
+
+.search-icon {
+    width: 18px;
+    height: 18px;
+    fill: rgba(55, 53, 47, 0.4);
+    margin-right: 10px;
+    flex-shrink: 0;
+    backface-visibility: hidden;
+    flex-grow: 0;
+}
+
+.search-input {
+    border: none;
+    font-size: inherit;
+    line-height: inherit;
+    border: none;
+    background: none;
+    width: 100%;
+    display: block;
+    resize: none;
+    padding: 0px;
+    min-width: 0px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.search-input::placeholder{
+    color: rgb(170, 170, 170);
+    font-family: 'pretendard';
+    font-weight: 200;
 }
