--- a/templates/resume/resume-edit.html
+++ b/templates/resume/resume-edit.html
@@ -1191,7 +1191,7 @@
                                                 </button>
                                             </h1>
                                             <div
-                                                class="memberedu-edit basic">
+                                                class="memberedu-edit">
                                                 <div
                                                     class="memberedu-edit-mark">
                                                 </div>
@@ -1985,7 +1985,7 @@
                                                             <span
                                                                 class="center-pa">-</span>
                                                             <div
-                                                                class="calendar-box">
+                                                                class="calendar-box changeoption">
                                                                 <input
                                                                     class="calendar-year profile-input"
                                                                     maxlength="4"
@@ -2004,12 +2004,12 @@
                                                         class="no-expire">
                                                         <input
                                                             autocomplete="off"
-                                                            id="etcHistories.0-proceeding"
+                                                            id="etcHistories.0-proceeding1"
                                                             class="noexpire-input"
                                                             type="checkbox"
-                                                            name="etcHistories.0-proceeding" /><label
-                                                            for="etcHistories.0-proceeding"
-                                                            class="sc-beab3720-0 lbwSup">종료일
+                                                             /><label
+                                                            for="etcHistories.0-proceeding1"
+                                                            class="noexpire-label">종료일
                                                             없음</label>
                                                     </div>
                                                 </div>
@@ -2678,3 +2678,5 @@
                                             </div>
                                         </div>
                                     </div> -->
+
+             
