--- a/static/css/aside/applicantmanagementleft.css
+++ b/static/css/aside/applicantmanagementleft.css
@@ -3,7 +3,7 @@ body {
     background-color: #f8f8f8;
 }
 .sidebar {
-    width: 250px;
+    width: 300px;
     background-color: #ffffff;
     padding: 20px;
     border: 1px solid #ddd;
@@ -27,13 +27,15 @@ body {
     justify-content: center;
 }
 .sidebar button span {
-    margin-left: -95px;
+    margin-left: -35%;
 }
 .sidebar button.clicked {
     font-weight: 900;
-    background-color: #f2f2f2; /* 더 연한 배경색 */
-    border-color: #ddd; /* 더 연한 테두리 색상 */
-    box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.1); /* 더 연한 음영 효과 */
+    background: rgb(0, 221, 109);
+    border: 1px solid rgb(0, 221, 109);
+    /* background-color: #f2f2f2;
+    border-color: #ddd; 
+    box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.1);  */
 }
 .sidebar ul {
     list-style: none;
@@ -51,7 +53,7 @@ body {
 .sidebar .triangle::before {
     content: "▶";
     position: absolute;
-    left: 10px;
+    left: 3%;
     top: 50%;
     transform: translateY(-50%);
     font-size: 10px;
@@ -77,52 +79,4 @@ body {
 .sidebar .circle.clicked::before {
     content: "■";
     font-size: 16px;
-}
-
-/* 본 문 */
-
-body {
-    padding: 20px;
-}
-.content-wrapper {
-    display: flex;
-    margin: 0px 200px;
-}
-.main-content {
-    background-color: #ffffff;
-    padding: 20px;
-    flex-grow: 1;
-    margin-left: 20px;
-}
-.row {
-    display: flex;
-    align-items: center;
-    padding: 10px 0;
-    border-bottom: 1px solid #ccc;
-}
-.checkbox {
-    cursor: pointer;
-    margin-right: 10px;
-}
-.star {
-    width: 16px;
-    height: 16px;
-    margin-right: 10px;
-    background-color: #ffeb3b; /* 노란색 배경 */
-    clip-path: polygon(
-        50% 0%,
-        61% 35%,
-        98% 35%,
-        68% 57%,
-        79% 91%,
-        50% 70%,
-        21% 91%,
-        32% 57%,
-        2% 35%,
-        39% 35%
-    ); /* 별 모양 */
-    cursor: pointer;
-}
-.column {
-    flex: 1;
 }
