--- a/templates/resume/resume-main.html
+++ b/templates/resume/resume-main.html
@@ -172,7 +172,7 @@
                         <li class="resume-content3">
                             <div class="resume-content-inner4">
                                 <div class="resume-content-top">
-                                    <button type="button">
+                                    <button type="button" class="resumemanage">
                                         <span style="display: flex"><svg xmlns="http://www.w3.org/2000/svg" width="24"
                                                 height="24" fill="none" viewBox="0 0 24 24">
                                                 <path fill="#A4A4A4" fill-rule="evenodd"
@@ -180,6 +180,13 @@
                                                     clip-rule="evenodd"></path>
                                             </svg></span>
                                     </button>
+                                    <div class="managemenu-wrapper hidden">
+                                        <ul>
+                                            <li><button type="button">다운로드</button></li>
+                                            <li><button type="button">이력서 복사</button></li>
+                                            <li><button class="warning" type="button" disabled="">이력서 삭제</button></li>
+                                        </ul>
+                                    </div>
                                     <h2>
                                         <a href="/resume/468095">김승균이력서_250130</a>
                                     </h2>
