--- a/static/css/resume/resume-main1.css
+++ b/static/css/resume/resume-main1.css
@@ -699,6 +699,21 @@
     padding: 8px;
 }
 
+.managemenu-wrapper > ul > li > button {
+    width: 100%;
+    height: 48px;
+    padding: 12px 8px;
+    text-align: left;
+    color: rgb(0, 0, 0);
+}
+.managemenu-wrapper > ul > li > button.warning {
+    color: rgb(240, 68, 82);
+}
+
+.managemenu-wrapper > ul > li > button:disabled {
+    color: rgb(196, 196, 196);
+}
+
 .resume-content-element::after {
     position: absolute;
     top: 5px;
