--- a/templates/aside/positionregisterleft.html
+++ b/templates/aside/positionregisterleft.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="../../static/css/aside/positionregisterleft.css" />
     </head>
     <body>
-        <div class="content-wrapper">
+        <div class="sidebar">
             <div class="headbar">
                 <div class="circle-container">
                     <p class="circle red"></p>
@@ -19,11 +19,18 @@
                     <p>포지션 미리보기</p>
                 </div>
             </div>
-            <div class="sidebar">
+            <div class="contentbar">
                 <div class="comment">입력한 포지션 정보를 미리 확인해보세요</div>
                 <div class="title">
                     <h1>[점핏] Java 백엔드 개발자</h1>
-                    <p><strong>점핏</strong></p>
+                    <p>
+                        <img
+                            src="https://oopy.lazyrockets.com/api/rest/cdn/image/f6190c63-320b-4330-ab75-9d17d85239e3.png"
+                            alt="home"
+                            class="css-cvdst6 ej0hkt119"
+                            style="height: 18px"
+                        /><strong>점핏</strong>
+                    </p>
                 </div>
                 <div class="content">
                     <h2>기술 스택</h2>
@@ -71,6 +78,20 @@
                 >
                     <path
                         fill="#222"
+                        fill-rule="evenodd"
+                        d="M17.75 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3Zm-3.5 1.5a3.5 3.5 0 1 1 1.131 2.577L9.686 11.33a3.518 3.518 0 0 1 .045 1.032l5.5 3.207a3.5 3.5 0 1 1-.92 1.779l-5.358-3.125a3.5 3.5 0 1 1-.195-4.666l5.598-3.199a3.505 3.505 0 0 1-.106-.859Zm-8 5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3Zm10 7.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Z"
+                        clip-rule="evenodd"
+                    ></path></svg
+                ><svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    aria-hidden="true"
+                >
+                    <path
+                        fill="#FFF"
                         fill-rule="evenodd"
                         d="M17.75 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3Zm-3.5 1.5a3.5 3.5 0 1 1 1.131 2.577L9.686 11.33a3.518 3.518 0 0 1 .045 1.032l5.5 3.207a3.5 3.5 0 1 1-.92 1.779l-5.358-3.125a3.5 3.5 0 1 1-.195-4.666l5.598-3.199a3.505 3.505 0 0 1-.106-.859Zm-8 5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3Zm10 7.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Z"
                         clip-rule="evenodd"
