--- a/templates/aside/positionregisterright.html
+++ b/templates/aside/positionregisterright.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="../../static/css/aside/positionregisterright.css">
     </head>
     <body>
-        <div class="content-wrapper">
+        <div class="sidebar">
             <div class="info">포지션 번호 : 10514</div>
             <div class="guide">포지션 등록 가이드 확인</div>
             <button class="approve">승인요청</button>
