--- a/static/css/aside/applicantmanagementleft.css
+++ b/static/css/aside/applicantmanagementleft.css
@@ -25,6 +25,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 55px;
 }
 .sidebar button span {
     margin-left: -35%;
@@ -33,6 +34,7 @@ body {
     font-weight: 900;
     background: rgb(0, 221, 109);
     border: 1px solid rgb(0, 221, 109);
+    color: white;
     /* background-color: #f2f2f2;
     border-color: #ddd; 
     box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.1);  */
