--- a/static/css/resume/resume-main1.css
+++ b/static/css/resume/resume-main1.css
@@ -575,7 +575,7 @@
 
 .resume-inner {
     width: 100%;
-    height: 100%;
+    height: fit-content;
     padding: 40px 0px 140px;
     background-color: rgb(245, 245, 248);
 }
@@ -591,7 +591,7 @@
 .resume-inner-section {
     position: relative;
     width: 980px;
-    /* height: 100%; */
+    height: 100%;
     margin: 0px auto 20px;
     padding: 32px 40px 40px;
     background-color: rgb(255, 255, 255);
@@ -614,7 +614,7 @@
 
 .resume-content-list2 {
     display: flex;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
     margin-top: 8px;
 }
 
@@ -622,7 +622,7 @@
     width: 100%;
     height: 180px;
     flex: 0 1 316px;
-    margin: 16px 16px 0px 0px;
+    margin: 16px 10px 0px 0px;
     background-color: rgb(245, 245, 248);
     border-radius: 12px;
 }
