--- a/templates/aside/positionregisterleft.html
+++ b/templates/aside/positionregisterleft.html
@@ -74,6 +74,27 @@
                         fill-rule="evenodd"
                         d="M17.75 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3Zm-3.5 1.5a3.5 3.5 0 1 1 1.131 2.577L9.686 11.33a3.518 3.518 0 0 1 .045 1.032l5.5 3.207a3.5 3.5 0 1 1-.92 1.779l-5.358-3.125a3.5 3.5 0 1 1-.195-4.666l5.598-3.199a3.505 3.505 0 0 1-.106-.859Zm-8 5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3Zm10 7.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Z"
                         clip-rule="evenodd"
+                    ></path></svg
+                ><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                    <path
+                        fill="#222"
+                        fill-rule="evenodd"
+                        d="M10.725 14.71a2 2 0 0 1 2.55 0l3.975 3.289V5H6.75v12.999l3.975-3.29ZM4.75 20.123V5a2 2 0 0 1 2-2h10.5a2 2 0 0 1 2 2v15.124a1 1 0 0 1-1.638.77L12 16.25l-5.612 4.645a1 1 0 0 1-1.638-.77Z"
+                        clip-rule="evenodd"
+                    ></path></svg
+                ><svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    aria-hidden="true"
+                >
+                    <path
+                        fill="#FFF"
+                        fill-rule="evenodd"
+                        d="M17.75 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3Zm-3.5 1.5a3.5 3.5 0 1 1 1.131 2.577L9.686 11.33a3.518 3.518 0 0 1 .045 1.032l5.5 3.207a3.5 3.5 0 1 1-.92 1.779l-5.358-3.125a3.5 3.5 0 1 1-.195-4.666l5.598-3.199a3.505 3.505 0 0 1-.106-.859Zm-8 5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3Zm10 7.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Z"
+                        clip-rule="evenodd"
                     ></path>
                 </svg>
                 <p>지원하기</p>
