--- a/static/css/resume/resume-main1.css
+++ b/static/css/resume/resume-main1.css
@@ -824,6 +824,26 @@
     border: 1px solid rgb(196, 196, 196);
 }
 
+.resume-question-inner.clicked {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 14px;
+    height: 14px;
+    position: relative;
+    top: 1px;
+    font-weight: 700;
+    text-align: center;
+    border-radius: 14px;
+    cursor: pointer;
+    font-size: 11px;
+    line-height: 16px;
+    color: rgb(255, 255, 255);
+    background: rgb(34, 34, 34);
+    border: 1px solid rgb(34, 34, 34);
+}
+
+
 .resume-question-inner::before {
     content: "?";
 }
@@ -832,6 +852,50 @@
     font-size: 14px;
     line-height: 20px;
     color: rgb(153, 153, 153);
+}
+
+.resumeopen-tooltip1 {
+    white-space: nowrap;
+    position: absolute;
+    z-index: 3;
+    color: rgb(102, 102, 102);
+    background-color: rgb(255, 255, 255);
+    animation: 0.3s linear 0s 1 normal none running none;
+    top: 28px;
+    transform: translate(calc(0%), 0px);
+    padding: 16px 50px 16px 16px;
+    border: 1px solid rgb(212, 212, 212);
+    border-radius: 4px;
+    font-size: 13px;
+    line-height: 18px;
+}
+
+.resumeopen-tooltip1 > button {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+}
+
+.resumeopen-tooltip2 {
+    white-space: nowrap;
+    position: absolute;
+    z-index: 3;
+    color: rgb(102, 102, 102);
+    background-color: rgb(255, 255, 255);
+    animation: 0.3s linear 0s 1 normal none running none;
+    top: 28px;
+    transform: translate(calc(0%), 0px);
+    padding: 16px 50px 16px 16px;
+    border: 1px solid rgb(212, 212, 212);
+    border-radius: 4px;
+    font-size: 13px;
+    line-height: 18px;
+}
+
+.resumeopen-tooltip2 > button {
+    position: absolute;
+    top: 16px;
+    right: 16px;
 }
 
 .new-resume {
