--- a/templates/resume/resume-main.html
+++ b/templates/resume/resume-main.html
@@ -206,10 +206,32 @@
                                 </div>
                                 <div class="resume-content-bottom">
                                     <div>
-                                        <button type="button" class="resume-open-button"></button><span>비공개</span>
+                                        <button type="button" class="resume-open-button"></button>
+                                        <span>비공개</span>
                                         <div class="resume-question">
                                             <div class="resume-question-inner"></div>
                                         </div>
+                                        <div class="resumeopen-tooltip1 tooltip-message hidden"><button type="button"><span
+                                                    style="display: flex;"><svg xmlns="http://www.w3.org/2000/svg"
+                                                        width="24" height="24">
+                                                        <g fill="none" fill-rule="evenodd">
+                                                            <path d="M0 0h24v24H0z"></path>
+                                                            <path stroke="#C4C4C4" stroke-linejoin="round"
+                                                                stroke-width="1.5" d="M18 6 6 18M6 6l12 12"></path>
+                                                        </g>
+                                                    </svg></span></button><strong>모든 정보가 비공개</strong> 됩니다.<br>입사지원한
+                                            기업에서만<br>이력서를 확인할 수 있습니다.</div>
+                                        <div class="resumeopen-tooltip2 tooltip-message hidden"><button type="button"><span
+                                                    style="display: flex;"><svg xmlns="http://www.w3.org/2000/svg"
+                                                        width="24" height="24">
+                                                        <g fill="none" fill-rule="evenodd">
+                                                            <path d="M0 0h24v24H0z"></path>
+                                                            <path stroke="#C4C4C4" stroke-linejoin="round"
+                                                                stroke-width="1.5" d="M18 6 6 18M6 6l12 12"></path>
+                                                        </g>
+                                                    </svg></span></button>이력서 열람서비스를<br>준비 중입니다. 이력서 공개하시면<br> 추후
+                                            <strong>이력서 열람 서비스를<br>통한 면접제안</strong>을 받으실 수 있습니다.</div>
+
                                     </div>
                                     <span>2025.01.30 등록</span>
                                 </div>
