--- a/templates/main/NoticeFaq.html
+++ b/templates/main/NoticeFaq.html
@@ -19,19 +19,32 @@
                         <div class="notionAppInner">
                             <div class="notionFrame">
                                 <!-- 상단 네비 -->
-                                <!-- 검색창 -->
-                                <div class="search-container">
-                                    <div class="search-box">
-                                        <div class="search-input-wrapper">
-                                            <svg viewBox="0 0 17 17" class="search-icon">
-                                                <path d="M6.78027 13.6729C8.24805 13.6729 9.60156 13.1982 10.709 12.4072L14.875 16.5732C15.0684 16.7666 15.3232 16.8633 15.5957 16.8633C16.167 16.8633 16.5713 16.4238 16.5713 15.8613C16.5713 15.5977 16.4834 15.3516 16.29 15.1582L12.1504 11.0098C13.0205 9.86719 13.5391 8.45215 13.5391 6.91406C13.5391 3.19629 10.498 0.155273 6.78027 0.155273C3.0625 0.155273 0.0214844 3.19629 0.0214844 6.91406C0.0214844 10.6318 3.0625 13.6729 6.78027 13.6729ZM6.78027 12.2139C3.87988 12.2139 1.48047 9.81445 1.48047 6.91406C1.48047 4.01367 3.87988 1.61426 6.78027 1.61426C9.68066 1.61426 12.0801 4.01367 12.0801 6.91406C12.0801 9.81445 9.68066 12.2139 6.78027 12.2139Z"></path>
-                                            </svg>
-                                            <input placeholder="공지사항" type="text" class="search-input" value="">
+                                <!-- 검색 모달창 -->
+                                <div class="searchModalLayout">
+                                    <div class="searchModalWindow">
+                                        <div class="notionQuickFindMenu">
+                                            <div class="searchModalWindow2">
+                                                <div class="searchSectionDivider">
+                                                    <div class="modalSearchInput">
+                                                        <svg viewBox="0 0 17 17" style="width: 18px; height: 18px; display: block; fill: rgba(55, 53, 47, 0.4); flex-shrink: 0; backface-visibility: hidden; flex-grow: 0; margin-right: 10px;"><path d="M6.78027 13.6729C8.24805 13.6729 9.60156 13.1982 10.709 12.4072L14.875 16.5732C15.0684 16.7666 15.3232 16.8633 15.5957 16.8633C16.167 16.8633 16.5713 16.4238 16.5713 15.8613C16.5713 15.5977 16.4834 15.3516 16.29 15.1582L12.1504 11.0098C13.0205 9.86719 13.5391 8.45215 13.5391 6.91406C13.5391 3.19629 10.498 0.155273 6.78027 0.155273C3.0625 0.155273 0.0214844 3.19629 0.0214844 6.91406C0.0214844 10.6318 3.0625 13.6729 6.78027 13.6729ZM6.78027 12.2139C3.87988 12.2139 1.48047 9.81445 1.48047 6.91406C1.48047 4.01367 3.87988 1.61426 6.78027 1.61426C9.68066 1.61426 12.0801 4.01367 12.0801 6.91406C12.0801 9.81445 9.68066 12.2139 6.78027 12.2139Z"></path></svg>
+                                                        <input placeholder="공지사항 & 자주 묻는 질문" type="text" class="searchInput" value>
+                                                    </div>
+                                                    <section class="modalSearchContents">
+                                                        <div role="button" tabindex="0" class="searchContent">
+                                                            <div class="contentTextWrapper">
+                                                                <div class="searchTextIcon"></div>
+                                                                <div class="searchTextContent"></div>
+                                                                <div class="searchTextButton"></div>
+                                                            </div>
+                                                        </div>
+                                                    </section>
+                                                    <footer class="modalSearchFooter"></footer>
+                                                </div>
+                                            </div> 
                                         </div>
                                     </div>
-                                </div>
-                                
-                                <!-- // 검색창 -->
+                                </div>    
+                                <!-- // 검색 모달창 -->
                                 <div class="upperNav">
                                     <div class="navigationWrapper">
                                         <div class="notionTopbar">
