--- a/static/css/aside/positionregisterright.css
+++ b/static/css/aside/positionregisterright.css
@@ -29,6 +29,7 @@
     height: 55px;
     font-weight: bold;
     margin-bottom: 16px;
+    border-radius: 4px;
 }
 .sidebar button.save.clicked,
 .sidebar button.approve.clicked,
@@ -37,6 +38,7 @@
     border: 1px solid rgb(0, 221, 109);
     color: rgb(255, 255, 255);
     padding: 0px 16px;
+    border-radius: 4px;
 }
 .sidebar button.save,
 .sidebar button.approve {
@@ -44,12 +46,14 @@
     border: 1px solid rgb(0, 0, 0, 0.1);
     color: rgb(0, 0, 0);
     padding: 0px 16px;
+    border-radius: 4px;
 }
 .sidebar button.delete {
     background: rgb(255, 255, 255);
     border: 1px solid rgb(0, 0, 0, 0.1);
     color: rgb(255, 0, 0);
     padding: 0px 16px;
+    border-radius: 4px;
 }
 .sidebar .agreement {
     font-size: 15px;
@@ -62,6 +66,7 @@
     padding-bottom: 20px;
     border-bottom: 1px solid rgba(85, 67, 67, 0.1);
     margin-bottom: 20px;
+    border-radius: 4px;
 }
 .sidebar .agreement input[type="checkbox"] {
     margin-right: 15px;
