--- a/static/css/aside/applicantEvaluateRightBottom.css
+++ b/static/css/aside/applicantEvaluateRightBottom.css
@@ -1,4 +1,3 @@
-
 .sidebar {
     width: 300px;
     padding: 20px;
@@ -7,6 +6,7 @@
 .sidebar h1 {
     font-size: 16px;
     font-weight: 900;
+    margin-bottom: 15px;
 }
 .sidebar h2 {
     font-size: 14px;
@@ -15,6 +15,28 @@
 .sidebar .input-section {
     margin-top: 20px;
 }
+.sidebar .img-container {
+    display: flex;
+    justify-content: space-between;
+}
+.sidebar .img-container .img-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 20px;
+    padding: 5px 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 14px;
+}
+.sidebar .img-container .img-button img {
+    background-color: #f2f2f2;
+    width: 15px;
+    height: 20px;
+    margin-right: 10px;
+    cursor: pointer;
+}
 .sidebar .input-section textarea {
     /* position: relative; */
     width: 100%;
@@ -22,18 +44,17 @@
     height: 160px;
     box-sizing: border-box;
 }
-.sidebar .submit-button{
+.sidebar .submit-button {
     position: relative;
     display: flex;
     justify-content: space-between; /* 또는 space-around, space-evenly */
     gap: 10px;
 }
-.sidebar .submit-button button{
+.sidebar .submit-button button {
     width: 100%;
     padding: 15px;
     background-color: #ffffff;
     border: 1px solid #ddd;
-    cursor: pointer;
     font-size: 16px;
     font-weight: 700;
     margin: 20px 0;
@@ -42,10 +63,12 @@
     align-items: center;
     justify-content: center;
     height: 55px;
+    border-radius: 4px;
 }
 .sidebar .submit-button button.clicked {
     background: rgb(0, 221, 109);
     border: 1px solid rgb(0, 221, 109);
     color: rgb(255, 255, 255);
     padding: 0px 16px;
+    border-radius: 4px;
 }
