--- a/static/css/aside/applicantmanagementleft.css
+++ b/static/css/aside/applicantmanagementleft.css
@@ -26,6 +26,7 @@ body {
     align-items: center;
     justify-content: center;
     height: 55px;
+    border-radius: 4px;
 }
 .sidebar button span {
     margin-left: -35%;
@@ -35,6 +36,7 @@ body {
     background: rgb(0, 221, 109);
     border: 1px solid rgb(0, 221, 109);
     color: white;
+    border-radius: 4px;
     /* background-color: #f2f2f2;
     border-color: #ddd; 
     box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.1);  */
