--- a/static/css/main/positionSort.css
+++ b/static/css/main/positionSort.css
@@ -93,10 +93,51 @@ header{
 }
 
 .mainNavigation{
+    display: none;
+    justify-content: space-between;
+    align-items: center;
+    height: 56px;
+    z-index: 30;
+}
+
+.mainNavigation.show {
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 56px;
+}
+
+.leftNavigation {
+    display: flex;
+    margin-left: -20px;
+}
+
+.leftNavigation:hover a {
+    opacity: 0.5;
+}
+
+.leftNavigation a:hover {
+    opacity: 1;
+}
+
+.leftNavigation>li{
+    margin: 0;
+    position: relative;
+    padding: 0px 20px;
+}
+
+.leftNavigation>li>a{
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    padding: 10px 4px;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.leftNavigation li,
+.rightNavigation li {
+    margin-right: 20px;
 }
 
 .logoWrap{
@@ -109,6 +150,10 @@ header{
 
 .mainSearch{
     position: relative;
+}
+
+.pageLogo{
+    display: inline-flex;
 }
 
 .searchWrapper{
@@ -132,7 +177,11 @@ header{
     border: 1.5px solid rgb(0, 221, 109);
 }
 
-.searchBox>input{
+.closeButton{
+    display: none;
+}
+
+.searchBox > input {
     width: 100%;
     padding: 0px 40px 0px 44px;
     height: 40px;
@@ -145,28 +194,62 @@ header{
     line-height: 24px;
 }
 
+.searchBox > input:focus {
+    outline: none;
+}
+
 .searchButton{
     position: absolute;
     left: 16px;
     top: 8px;
 }
 
-.searchButton>svg>g>circle, .searchButton>svg>g>path{
+.searchButton > svg > g > circle {
     stroke: rgb(0, 221, 109);
 }
 
-.closeButton{
-    display: none;
+.searchButton > svg > g > path {
+    stroke: rgb(0, 221, 109);
+}
+
+.searchWindow {
+    position: absolute;
+    top: 51px;
+    left: 0px;
+    width: 472px;
+    background: rgb(255, 255, 255);
+    border: 1px solid rgb(228, 228, 228);
+    box-shadow: rgba(20, 20, 20, 0.12) 0px 8px 16px;
+    border-radius: 8px;
+    z-index: 999;
+    padding: 24px;
+}
+
+.searchWindowTitle{
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    margin-bottom: 12px;
+}
+
+.searchWindowTitle > h4{
+    font-size: 15px;
+    line-height: 22px;
+    font-weight: 700;
+    color: rgb(0, 0, 0);
+}
+
+.searchWindowContents{
+    padding: 28px 0px 36px;
+    text-align: center;
+    font-size: 14px;
+    line-height: 20px;
+    color: rgb(153, 153, 153);
 }
 
 main{
     background-color: rgb(255, 255, 255);
     padding-top: 120px;
-}
-
-.leftNavigation{
-    display: flex;
-    margin-left: -20px;
 }
 
 .leftNavigation>li{
@@ -248,6 +331,11 @@ main{
     border: 1px solid rgb(0, 221, 109);
     background-color: rgb(0, 221, 109);
     font-weight: bold;
+}
+
+.categoryButton[aria-pressed="false"]:hover{
+    background-color: rgb(228, 228, 228);
+    border: 1px solid rgb(228, 228, 228);
 }
 
 .categoryButton>span{
@@ -376,6 +464,10 @@ main{
     -webkit-line-clamp: 2;
     box-orient: vertical;
     -webkit-box-orient: vertical;
+}
+
+.mainContentCard:hover .positionCardTitle{
+    text-decoration: underline;
 }
 
 .companyName>span{
@@ -514,4 +606,102 @@ footer{
 
 .snsIcon>a>img {
     margin-right: 8px;
+}
+
+.dDay{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: fit-content;
+    padding: 2px 8px;
+    background-color: rgba(0, 221, 109, 0.8);
+    border-radius: 4px;
+    color: rgb(255, 255, 255);
+    font-size: 13px;
+    line-height: 18px;
+    font-weight: 700;
+    box-sizing: border-box;
+    border: 1px solid rgb(0, 221, 109);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 4px 4px 0px, rgba(0, 0, 0, 0.08) 0px -2px 4px 0px;
+}
+
+.loginedMemberButton{
+    padding-top: 1px;
+    height: 42px;
+}
+
+.loginedMemberButton button{
+    width: 60px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.rightNavigation li button{
+    display: inline-block;
+    position: relative;
+    padding: 10px 0px;
+    font-weight: 500;
+    color: rgb(34, 34, 34);
+    text-align: end;
+}
+
+.rightNavigation li button:hover{
+    color: rgb(34, 34, 34);
+}
+
+.loginedMemberButton svg{
+    position: relative;
+    top: 2px;
+    margin-left: 5px;
+}
+
+.loginedMemberButton:hover svg {
+    transform: rotate(180deg);
+}
+
+.loginedMemberButton svg path{
+    fill: rgb(204, 204, 204);
+}
+
+.loginMemberNav{
+    display: none;
+    position: absolute;
+    width: 175px;
+    right: 0px;
+    border: 1px solid rgb(228, 228, 228);
+    box-sizing: border-box;
+    box-shadow: rgba(20, 20, 20, 0.12) 0px 8px 16px;
+    border-radius: 4px;
+    padding: 8px 0px;
+    background-color: rgb(255, 255, 255);
+}
+
+.loginMemberNav ul li:hover{
+    background-color: rgb(244, 244, 244);
+    cursor: pointer;
+}
+
+.loginMemberNav li button:hover{
+    color: rgb(34, 34, 34);
+}
+
+.loginMemberNav ul li{
+    margin-right: 0;
+    position: relative;
+    padding: 0px 12px;
+    height: 48px;
+    display: flex;
+    align-items: center;
+    font-size: 15px;
+    line-height: 22px;
+}
+
+.loginMemberNav ul li > a, .loginMemberNav ul li button{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    padding: 0px 8px;
+    font-weight: normal;
 }
